--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
 <meta charset="utf-8">
 <title>見せ卓 : misetaku by ミラドール丁稚さん</title>
 <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
+<meta name="author" content="https://miladoll.jp/">
+
 <!--
     @TODO
-        * 
+        * Markdown部分のCSS調整
+            * CODEを強制改行させたい
+                * あっ！ CODE PRE だからか！！
+        * PCでふつうにみたときの縦幅が100%にならないのはそういうもの？
+        * スマホでPWAじゃないときもアドレスバーを消せる？
 -->
 
-<style>
+<style type="text/css">
 .hiddenResources
 {
     display: none;
@@ -91,11 +98,18 @@ body
     margin: 0;
     padding: 0;
     text-align: right;
-    transform: rotate(180deg);
     text-wrap: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
+}
+.rotate180Deg
+{
+    transform: rotate(180deg);
+}
+.rotate0Deg
+{
+    transform: rotate(0deg);
 }
 #areaWholeResult::-webkit-scrollbar-track
 {
@@ -149,7 +163,6 @@ body
 }
 #menuButton
 {
-    content: 'a';
     position: absolute;
     top: 0;
     left: -8svw;
@@ -160,6 +173,21 @@ body
     width: 100%;
     height: auto;
 }
+
+#buttonFlip
+{
+    position: absolute;
+    width: 6svw;
+    right: 0;
+    bottom: 0;
+}
+#buttonFlip svg
+{
+    width: 100%;
+    height: auto;
+}
+
+
 
 #areaAccumulator
 {
@@ -399,6 +427,48 @@ body
 #modalHelpBody
 {
     overflow-y: auto;
+    user-select: auto;
+    height: 57svh;
+    -webkit-overflow-scrolling: touch;
+}
+#modalHelpBody #version
+{
+    text-align: right;
+    margin-right: 1em;
+}
+
+#modalHelpBodyContent
+{
+    /* HELP_CSS */
+code{white-space:pre;}q{quotes:"“" "”" "‘" "’";}.md2html-container{max-width:800px;margin:0 auto;}.md2html-container > h1:first-child{margin-top:0;}body{font-family:Helvetica,arial,sans-serif;font-size:14px;line-height:1.6;padding-top:10px;padding-bottom:10px;background-color:white;padding:30px;}body > *:first-child{margin-top:0 !important;}body > *:last-child{margin-bottom:0 !important;}a{color:#4183C4;}a.absent{color:#cc0000;}a.anchor{display:block;padding-left:30px;margin-left:-30px;cursor:pointer;position:absolute;top:0;left:0;bottom:0;}h1,h2,h3,h4,h5,h6{margin:20px 0 10px;padding:0;font-weight:bold;-webkit-font-smoothing:antialiased;cursor:text;position:relative;}h1:hover a.anchor,h2:hover a.anchor,h3:hover a.anchor,h4:hover a.anchor,h5:hover a.anchor,h6:hover a.anchor{text-decoration:none;}h1 tt,h1 code{font-size:inherit;}h2 tt,h2 code{font-size:inherit;}h3 tt,h3 code{font-size:inherit;}h4 tt,h4 code{font-size:inherit;}h5 tt,h5 code{font-size:inherit;}h6 tt,h6 code{font-size:inherit;}h1{font-size:28px;color:black;}h2{font-size:24px;border-bottom:1px solid #cccccc;color:black;}h3{font-size:18px;}h4{font-size:16px;}h5{font-size:14px;}h6{color:#777777;font-size:14px;}p,blockquote,ul,ol,dl,li,table,pre{margin:15px 0;}hr{border:0 none;color:#cccccc;height:4px;padding:0;}body > h2:first-child{margin-top:0;padding-top:0;}body > h1:first-child{margin-top:0;padding-top:0;}body > h1:first-child + h2{margin-top:0;padding-top:0;}body > h3:first-child,body > h4:first-child,body > h5:first-child,body > h6:first-child{margin-top:0;padding-top:0;}a:first-child h1,a:first-child h2,a:first-child h3,a:first-child h4,a:first-child h5,a:first-child h6{margin-top:0;padding-top:0;}h1 p,h2 p,h3 p,h4 p,h5 p,h6 p{margin-top:0;}li p.first{display:inline-block;}ul,ol{padding-left:30px;}ul :first-child,ol :first-child{margin-top:0;}ul :last-child,ol :last-child{margin-bottom:0;}dl{padding:0;}dl dt{font-size:14px;font-weight:bold;font-style:italic;padding:0;margin:15px 0 5px;}dl dt:first-child{padding:0;}dl dt > :first-child{margin-top:0;}dl dt > :last-child{margin-bottom:0;}dl dd{margin:0 0 15px;padding:0 15px;}dl dd > :first-child{margin-top:0;}dl dd > :last-child{margin-bottom:0;}blockquote{border-left:4px solid #dddddd;padding:0 15px;color:#777777;}blockquote > :first-child{margin-top:0;}blockquote > :last-child{margin-bottom:0;}table{border-collapse:collapse;padding:0;}table tr{border-top:1px solid #cccccc;background-color:white;margin:0;padding:0;}table tr:nth-child(2n){background-color:#f8f8f8;}table tr th{font-weight:bold;border:1px solid #cccccc;text-align:left;margin:0;padding:6px 13px;}table tr td{border:1px solid #cccccc;text-align:left;margin:0;padding:6px 13px;}table tr th :first-child,table tr td :first-child{margin-top:0;}table tr th :last-child,table tr td :last-child{margin-bottom:0;}img{max-width:100%;}span.frame{display:block;overflow:hidden;}span.frame > span{border:1px solid #dddddd;display:block;float:left;overflow:hidden;margin:13px 0 0;padding:7px;width:auto;}span.frame span img{display:block;float:left;}span.frame span span{clear:both;color:#333333;display:block;padding:5px 0 0;}span.align-center{display:block;overflow:hidden;clear:both;}span.align-center > span{display:block;overflow:hidden;margin:13px auto 0;text-align:center;}span.align-center span img{margin:0 auto;text-align:center;}span.align-right{display:block;overflow:hidden;clear:both;}span.align-right > span{display:block;overflow:hidden;margin:13px 0 0;text-align:right;}span.align-right span img{margin:0;text-align:right;}span.float-left{display:block;margin-right:13px;overflow:hidden;float:left;}span.float-left span{margin:13px 0 0;}span.float-right{display:block;margin-left:13px;overflow:hidden;float:right;}span.float-right > span{display:block;overflow:hidden;margin:13px auto 0;text-align:right;}code,tt{margin:0 2px;padding:0 5px;white-space:nowrap;border:1px solid #eaeaea;background-color:#f8f8f8;border-radius:3px;}pre code{margin:0;padding:0;white-space:pre;border:none;background:transparent;}.highlight pre{background-color:#f8f8f8;border:1px solid #cccccc;font-size:13px;line-height:19px;overflow:auto;padding:6px 10px;border-radius:3px;}pre{background-color:#f8f8f8;border:1px solid #cccccc;font-size:13px;line-height:19px;overflow:auto;padding:6px 10px;border-radius:3px;}pre code,pre tt{background-color:transparent;border:none;}
+    /* /HELP_CSS */
+    h1, h2, h3, h4, h5, h6
+    {
+        font-size: calc( 100svw / 25 );
+    }
+    h1
+    {
+        font-size: 1.4em;
+    }
+    h2
+    {
+        font-size: 1.2em;
+    }
+    ul, ol
+    {
+        padding-left: 1.6em;
+    }
+    code, tt {
+        font-size: 110%;
+        border-color: #919191;
+        padding: 4px 5px;
+    }
+}
+#modalHelpBodyContent
+{
+    overflow-wrap: anywhere;
+    word-break: break-all;
+    line-break: loose;
 }
 
 </style>
@@ -415,12 +485,17 @@ body
     >
         <div
             id="areaWholeResult"
+            class="rotate180Deg"
         ></div>
         <div
             id="overflowFlagWholeResult"
         >
             桁あふれ
         </div>
+        <button
+            id="buttonFlip"
+            type="button"
+        ></button>
     </div>
 
     <div
@@ -480,7 +555,111 @@ body
     <div
         id="modalHelpBody"
     >
-        バージョン：{{VERSION}}
+        <div
+            id="version"
+        >
+            バージョン：{{VERSION}}
+        </div>
+        <div
+            id="modalHelpBodyContent"
+        >
+            <!-- README -->
+  <div class="md2html-container">
+<h1 id="見せ卓">見せ卓</h1>
+<p>「見せ卓 : misetaku by ミラドール丁稚さん」についてのヘルプです。</p>
+<p>「見せ卓」は、同人イベントなどで「購入額をお客さんにわかりやすく表示する」ためにつくった、かんたんな電卓です。</p>
+<p>特徴は以下のとおりです：</p>
+<ul>
+<li>計算結果が上下逆（お客さん向け）に表示される</li>
+<li>預り金からお釣りを計算する機能がある</li>
+<li>電卓機能は簡単な＋／－のみ</li>
+<li>単一のHTMLファイルのみで動作する</li>
+<li>おまけとして、計算履歴を画面上に遺していく機能がある</li>
+</ul>
+<p>タブレットやスマホのブラウザで利用することを想定しています。</p>
+<hr />
+<p>目次：</p>
+<!-- TOC -->
+<ul>
+<li><a href="#見せ卓">見せ卓</a>
+<ul>
+<li><a href="#使い始めるには">使い始めるには</a></li>
+<li><a href="#使い方">使い方</a></li>
+<li><a href="#動作環境・検証環境について">動作環境・検証環境について</a></li>
+<li><a href="#改版履歴">改版履歴</a></li>
+</ul></li>
+</ul>
+<!-- /TOC -->
+<hr />
+<h2 id="使い始めるには">使い始めるには</h2>
+<p>使い始め方には、大きく分けて2種類あります。</p>
+<ol type="1">
+<li>ブラウザで直接アクセスする<br />
+URL は <code>https://miladoll.github.io/misetaku/</code> です。 <a href="https://miladoll.github.io/misetaku/">リンクはこちら</a></li>
+<li>HTMLをダウンロードしてきて直接開く<br />
+<a href="https://github.com/miladoll/misetaku/blob/master/index.html">Githubのリポジトリ</a> から 「Download」または「Download raw file」 という項目を探してクリック、HTMLファイル <code>index.html</code> を適当な場所に保存してください。<br />
+使うときは保存したファイルを直接ブラウザで開きます</li>
+</ol>
+<p>「ブラウザで直接アクセス」して、ブラウザの「ホーム画面に追加」をすると、</p>
+<ul>
+<li>端末のホーム画面にアプリのようなショートカットアイコンができて呼び出せるようになります</li>
+<li>アドレスバーなどが非表示になります。</li>
+</ul>
+<p>「HTMLをダウンロードしてきて直接開く」場合、必要なのは <code>index.html</code> ファイルのみです。当然、このファイルを適当な Webサーバに設置してアクセスすれば、そのまま動作します。</p>
+<h2 id="使い方">使い方</h2>
+<p>基本的に簡易電卓そのままです。</p>
+<p>以下はボタン操作の例です：</p>
+<ul>
+<li><code>1600</code> <code>=</code><br />
+→ <code>1600</code> と表示</li>
+<li><code>1600</code> <code>+</code> <code>1000</code> <code>=</code><br />
+→ <code>2600</code> と表示</li>
+<li><code>1600</code> <code>+</code> <code>1000</code> <code>+</code> <code>1000</code> <code>=</code><br />
+→ <code>3600</code> と表示</li>
+<li><code>1600</code> <code>+</code> <code>1000</code> <code>+</code> <code>1000</code> <code>預</code> <code>4000</code> <code>=</code><br />
+→ <code>400</code> と表示</li>
+<li><code>1600</code> <code>=</code> <code>+</code> <code>2000</code> <code>=</code><br />
+→ <code>3600</code> と表示</li>
+<li><code>1600</code> <code>=</code> <code>預</code> <code>2000</code> <code>=</code><br />
+→ <code>400</code> と表示</li>
+</ul>
+<h2 id="動作環境検証環境について">動作環境・検証環境について</h2>
+<p>主な動作環境は以下のとおりです。これ以外では動作が保証できません：</p>
+<ul>
+<li>比較的新しい Android／iOS系 タブレットおよびスマートフォン</li>
+<li>ブラウザは、かなり新しい Chrome／Safari</li>
+</ul>
+<p>検証環境は以下のとおりで、この環境では動作が保証されています：</p>
+<ul>
+<li>Android 13以降</li>
+<li>Chrome 114以降</li>
+</ul>
+<p>動作に必要としているWeb関連機能で互換性を左右しやすい事項は以下のとおりです：</p>
+<ul>
+<li>CSS grid</li>
+<li>CSS svh()</li>
+<li>HTML Popover API</li>
+<li><code>&amp;</code> を使わない CSS ネスト</li>
+</ul>
+<h2 id="改版履歴">改版履歴</h2>
+<ul>
+<li>0.8.2
+<ul>
+<li>フリップボタン（計算結果の表示方向を180度変える）を追加</li>
+</ul></li>
+<li>0.8.2
+<ul>
+<li>ヘルプをつけた</li>
+<li>Make環境の追加</li>
+</ul></li>
+<li>0.8.1
+<ul>
+<li>初期版</li>
+</ul></li>
+</ul>
+  </div>
+            <!-- /README -->
+        </div>
     </div>
 </div>
 
@@ -692,10 +871,21 @@ body
         </g>
     </svg>
 
+    <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1024 1024"
+        width="48px" height="48px" 
+        id="icon-flip"
+    >
+        <path
+            d="M213.333333 259.84v512l-55.04-55.466667a42.666667 42.666667 0 0 0-60.586666 60.586667l128 128a42.666667 42.666667 0 0 0 60.586666 0l128-128a42.666667 42.666667 0 0 0 0-60.586667 42.666667 42.666667 0 0 0-60.586666 0L298.666667 771.84v-512A66.56 66.56 0 0 1 363.946667 192H469.333333a42.666667 42.666667 0 0 0 0-85.333333H363.946667A151.893333 151.893333 0 0 0 213.333333 259.84zM609.706667 247.04a42.666667 42.666667 0 0 0 60.586666 60.586667L725.333333 252.16v512a66.56 66.56 0 0 1-65.28 67.84H554.666667a42.666667 42.666667 0 0 0 0 85.333333h105.386666A151.893333 151.893333 0 0 0 810.666667 764.16v-512l55.04 55.466667a42.666667 42.666667 0 0 0 60.586666 0 42.666667 42.666667 0 0 0 0-60.586667l-128-128a42.666667 42.666667 0 0 0-60.586666 0z"
+        />
+    </svg>
+
 </div>
 
 <script>
-const VERSION = '0.8.1';
+const VERSION = '0.8.3';
 
 const KEYS = [
     '7', '8', '9',
@@ -913,6 +1103,20 @@ function onClickNodePad(e) {
 }
 
 function pageStaging() {
+    let nodeButtonFlip = $$('buttonFlip');
+    nodeButtonFlip.appendChild( $$('icon-flip') );
+    nodeButtonFlip.addEventListener(
+        'click',
+        () => {
+            let currentStyle = NODE_AREA_WHOLE_RESULT.className;
+            NODE_AREA_WHOLE_RESULT.className =
+                ( currentStyle == 'rotate180Deg' )
+                ? 'rotate0Deg'
+                : 'rotate180Deg'
+            ;
+        },
+        false
+    );
     let nodeMenuButton = $$('menuButton');
     nodeMenuButton.appendChild( $$('icon-hamburger') );
     let nodeModalHelpBody = $$('modalHelpBody');
