計・釣銭表示追加

--- a/exres/readme/_readme.html
+++ b/exres/readme/_readme.html
@@ -380,7 +380,11 @@ URL は <code>https://miladoll.github.io/misetaku/</code> です。 <a href="htt
 </ul>
 <h2 id="改版履歴">改版履歴</h2>
 <ul>
-<li>0.8.2
+<li>0.8.4
+<ul>
+<li>「計」「釣銭」表示追加</li>
+</ul></li>
+<li>0.8.3
 <ul>
 <li>フリップボタン（計算結果の表示方向を180度変える）を追加</li>
 </ul></li>
